--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yeinerf.com" # the base hostname & protocol for your site
 twitter_username: yeinerf
 github_username:  yefb
+comments: true
 
 # Build settings
 markdown: kramdown
